Fix toggle switch fill alignment

--- a/src/less/components/toggle.less
+++ b/src/less/components/toggle.less
@@ -18,9 +18,6 @@
       background-color: transparent;
       border-radius: 50%;
       height: @radio-button-size;
-      left: -2px;
-      position: absolute;
-      top: -2px;
       transform: scale(0);
       width: @radio-button-size;
     }
